--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Downloader</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+  <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
   <!-- Navigation Bar -->
   <nav>
     <div class="logo-container">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" class="logo">
+    
     <h2>VideoDownloader</h2>
   </div>
     <ul>
@@ -110,6 +110,6 @@
 
 
   <!-- JavaScript -->
-  <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+  <script src="static/js/script.js"></script>
 </body>
 </html>
